@@ -9,6 +9,7 @@ Improved menu:
 * now you can use binary numbers on expressions
 Added support for extracting hdf files
 Now compressed/packed files (like mdv or hdf) show <exp> (for "expand") on file selector
+Now some files can be expanded with Space key on file selector (compressed of course as before, but some more)
 
 Some other minor bugfixes and improvements
 
